@@ -26,6 +26,7 @@
 12. When collapse/expand, only adjust height and not width.
 13. Add a 'Cache' page to settngs dialog, allowing cahce usage to be displayed
     and cache items delete.
+14. Move group warning to last stage of intial settings wizard.
 
 0.9.1
 -----
